<resources>
    <string name="app_name">Exercise</string>
    <string name="loginForm">Login Form</string>
    <string name="tUsername">User Name</string>
    <string name="tPassword">Password</string>
    <string name="login">Login</string>
    <string name="tlogo">Icon Login</string>
    <string name="tdaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="tgender">Jenis Kelamin</string>
    <string name="tagama">Agama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epassword">Masukkan Password</string>
    <string name="erepassword">Masukkan Kembali Password</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="mnhapus">Hapus Data</string>
</resources>